    Added new user interface `enable`, `disable`, and `isDisabled` methods #TINY-6397
    Added new `closest` formatter API to get the closest matching selection format from a set of formats. #TINY-6479
    Added new `name` field to the `style_formats` setting object to enable specifying a name for the format. #TINY-4239
    Changed `readonly` mode to allow hyperlinks to be clickable #TINY-6248
    Fixed a security issue where URLs in attributes weren't correctly sanitized #TINY-6518
    Fixed `DOMUtils.getParents` incorrectly including the shadow root in the array of elements returned #TINY-6540
    Fixed an issue where the root document could be scrolled while an editor dialog was open inside a shadow root #TINY-6363
    Fixed `getContent` with text format returning a new line when the editor is empty #TINY-6281
    Fixed nested tables with `colgroup` elements incorrectly always resizing the inner table #TINY-6623
    Fixed the `visualchars` plugin causing the editor to steal focus when initialized #TINY-6282
    Fixed `fullpage` plugin altering text content in `editor.getContent()` #TINY-6541
    Fixed `fullscreen` plugin not working correctly with multiple editors and shadow dom #TINY-6280
    Fixed font size keywords such as `medium` not displaying correctly in font size menus #TINY-6291
    Fixed an issue where some attributes in table cells were not copied over to new rows or columns #TINY-6485
    Fixed incorrectly removing formatting on adjacent spaces when removing formatting on a ranged selection #TINY-6268
    Fixed the `Cut` menu item not working in the latest version of Firefox #TINY-6615
    Fixed some incorrect types in the new TypeScript declaration file #TINY-6413
    Fixed a regression whereby a fake offscreen selection element was incorrectly created for the editor root node #TINY-6555
    Fixed an issue where menus would incorrectly collapse in small containers #TINY-3321